[tool.poetry]
name = "population-linkage"
version = "0.1.0"
description = "Threshold analysis for population linkage"
authors = ["Aleksandr Isaev <ai52@st-andrews.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"